==> MartinFromChina/new_C/home_work/1_WiFi/c_code/esp8266_dri/User/Drive/bsp_uart_fifo.c <==
#include "bsp_uart_fifo.h"
#include "LogDebugSwitch.h"
#include "bsp.h"
#include "usart.h"
#include "../../../../../../module/common/AppCommon.h"
#define UART_TRANS_TIME_THRESHOLD_IN_MS    1000

void comClearRxFifo(COM_PORT_E _ucPort)
{
	UART_T *pUart;

	pUart = ComToUart(_ucPort);
	if (pUart == 0){return;}

	pUart->usRxWrite = 0;
	pUart->usRxRead = 0;
	pUart->usRxCount = 0;
}

void UartVarInit(void)
{
#if UART1_FIFO_EN == 1
	g_tUart1.uart = &huart1;						/* STM32 串口设备 */
	g_tUart1.pTxBuf = g_TxBuf1;					/* 发送缓冲区指针 */
	g_tUart1.pRxBuf = g_RxBuf1;					/* 接收缓冲区指针 */
	g_tUart1.usTxBufSize = UART_COM1_MAX_LENGTH;	/* 发送缓冲区大小 */
	g_tUart1.usRxBufSize = UART1_RX_BUF_SIZE;	/* 接收缓冲区大小 */
	g_tUart1.usRxWrite = 0;						/* 接收FIFO写索引 */
	g_tUart1.usRxRead = 0;						/* 接收FIFO读索引 */
	g_tUart1.usRxCount = 0;						/* 接收到的新数据个数 */
	g_tUart1.SendBefor = 0;						/* 发送数据前的回调函数 */
	g_tUart1.SendOver = 0;						/* 发送完毕后的回调函数 */
	g_tUart1.ReciveNew = 0;						/* 接收到新数据后的回调函数 */
	g_tUart1.Sending = 0;						/* 正在发送中标志 */
#endif

#if UART2_FIFO_EN == 1
	g_tUart2.uart = &huart2;						/* STM32 串口设备 */
	g_tUart2.pTxBuf = g_TxBuf2;					/* 发送缓冲区指针 */
	g_tUart2.pRxBuf = g_RxBuf2;					/* 接收缓冲区指针 */
	g_tUart2.usTxBufSize = UART_COM2_MAX_LENGTH;	/* 发送缓冲区大小 */
	g_tUart2.usRxBufSize = UART2_RX_BUF_SIZE;	/* 接收缓冲区大小 */
	g_tUart2.usRxWrite = 0;						/* 接收FIFO写索引 */
	g_tUart2.usRxRead = 0;						/* 接收FIFO读索引 */
	g_tUart2.usRxCount = 0;						/* 接收到的新数据个数 */
	g_tUart2.SendBefor = 0;						/* 发送数据前的回调函数 */
	g_tUart2.SendOver = 0;						/* 发送完毕后的回调函数 */
	g_tUart2.ReciveNew = 0;						/* 接收到新数据后的回调函数 */
	g_tUart2.Sending = 0;						/* 正在发送中标志 */
#endif

#if UART3_FIFO_EN == 1
	g_tUart3.uart = &huart3;						/* STM32 串口设备 */
	g_tUart3.pTxBuf = g_TxBuf3;					/* 发送缓冲区指针 */
	g_tUart3.pRxBuf = g_RxBuf3;					/* 接收缓冲区指针 */
	g_tUart3.usTxBufSize = UART_COM3_MAX_LENGTH;	/* 发送缓冲区大小 */
	g_tUart3.usRxBufSize = UART3_RX_BUF_SIZE;	/* 接收缓冲区大小 */
	g_tUart3.usRxWrite = 0;						/* 接收FIFO写索引 */
	g_tUart3.usRxRead = 0;						/* 接收FIFO读索引 */
	g_tUart3.usRxCount = 0;						/* 接收到的新数据个数 */
	g_tUart3.SendBefor = 0;						/* 发送数据前的回调函数 */
	g_tUart3.SendOver = 0;						/* 发送完毕后的回调函数 */
	g_tUart3.ReciveNew = 0;						/* 接收到新数据后的回调函数 */
	g_tUart3.Sending = 0;						/* 正在发送中标志 */
#endif

#if UART4_FIFO_EN == 1
	g_tUart4.uart = &huart4;						/* STM32 串口设备 */
	g_tUart4.pTxBuf = g_TxBuf4;					/* 发送缓冲区指针 */
	g_tUart4.pRxBuf = g_RxBuf4;					/* 接收缓冲区指针 */
	g_tUart4.usTxBufSize = UART_COM4_MAX_LENGTH;	/* 发送缓冲区大小 */
	g_tUart4.usRxBufSize = UART4_RX_BUF_SIZE;	/* 接收缓冲区大小 */
	g_tUart4.usRxWrite = 0;						/* 接收FIFO写索引 */
	g_tUart4.usRxRead = 0;						/* 接收FIFO读索引 */
	g_tUart4.usRxCount = 0;						/* 接收到的新数据个数 */
	g_tUart4.SendBefor = 0;						/* 发送数据前的回调函数 */
	g_tUart4.SendOver = 0;						/* 发送完毕后的回调函数 */
	g_tUart4.ReciveNew = 0;						/* 接收到新数据后的回调函数 */
	g_tUart4.Sending = 0;						/* 正在发送中标志 */
#endif

#if UART5_FIFO_EN == 1
	g_tUart5.uart = &huart5;						/* STM32 串口设备 */
	g_tUart5.pTxBuf = g_TxBuf5;					/* 发送缓冲区指针 */
	g_tUart5.pRxBuf = g_RxBuf5;					/* 接收缓冲区指针 */
	g_tUart5.usTxBufSize = UART_COM5_MAX_LENGTH;	/* 发送缓冲区大小 */
	g_tUart5.usRxBufSize = UART5_RX_BUF_SIZE;	/* 接收缓冲区大小 */
	g_tUart5.usRxWrite = 0;						/* 接收FIFO写索引 */
	g_tUart5.usRxRead = 0;						/* 接收FIFO读索引 */
	g_tUart5.usRxCount = 0;						/* 接收到的新数据个数 */
	g_tUart5.SendBefor = 0;						/* 发送数据前的回调函数 */
	g_tUart5.SendOver = 0;						/* 发送完毕后的回调函数 */
	g_tUart5.ReciveNew = 0;						/* 接收到新数据后的回调函数 */
	g_tUart5.Sending = 0;						/* 正在发送中标志 */
#endif
}

static void UartSend(UART_T *_pUart,const uint8_t *_ucaBuf, uint16_t _usLen)
{
	uint32_t start_cnt ;
	#if (USE_INSERT_DEBUG != 0)
	HAL_StatusTypeDef status;
	#endif
	if(_pUart ->usTxBufSize < _usLen)
	{
		INSERT(LogDebug)(UART_SEND_DEBUG,("UartSend _usLen %d > _pUart ->usTxBufSize \r\n",_usLen,_pUart ->usTxBufSize));
		return ;
	}
	if(_pUart ->pTxBuf == X_Null)
	{
		INSERT(LogDebug)(UART_SEND_DEBUG,("UartSend error \r\n"));
		return ;
	}
	
	start_cnt = HAL_GetTick();
	while(_pUart ->uart ->gState != HAL_UART_STATE_READY)
	{
		if((HAL_GetTick() - start_cnt  ) > UART_TRANS_TIME_THRESHOLD_IN_MS) 
		{
			INSERT(LogDebug)(UART_SEND_DEBUG,("UartSend timeout; gstate = %d\r\n",_pUart ->uart ->gState));
			return ;
		}
		
	}
	CopyBuffer(_ucaBuf,_pUart ->pTxBuf,_usLen);
	#if (USE_INSERT_DEBUG != 0)
	status = 
	#endif
	HAL_UART_Transmit_IT(_pUart ->uart,_pUart ->pTxBuf,_usLen);
	INSERT(LogDebug)(UART_SEND_DEBUG,(" %2x: sent %d bytes ; status = %d\r\n",_pUart ->uart,_usLen,status));
}

static void UartIRQ(UART_T *_pUart,uint8_t data)
{
		/* 从串口接收数据寄存器读取数据存放到接收FIFO */
//		INSERT(LogDebug)(1,("%2x\r\n",ch));
		_pUart->pRxBuf[_pUart->usRxWrite] = data;
		if (++_pUart->usRxWrite >= _pUart->usRxBufSize)
		{
			_pUart->usRxWrite = 0;
		}
		if (_pUart->usRxCount < _pUart->usRxBufSize)
		{
			_pUart->usRxCount++;
//			INSERT(LogDebug)(1,("_pUart->usRxCount = %d data %2x\r\n",_pUart->usRxCount,data));
		}
}
