==> armku/StdOS/User/bsp_uart_fifo.cpp <==
#include "stm32f10x.h"
#include "bsp_uart_fifo.h"
#include <stdio.h>
#define UART1_TX_BUF_SIZE	1*1024
#define UART1_RX_BUF_SIZE	1*1024

void Usart_T::comClearRxFifo(COM _ucPort)
{
    UART_T *pUart;

    pUart = ComToUart(_ucPort);
    if (pUart == 0)
    {
        return ;
    }

    pUart->rx.Clear();
}

void UartVarInit(void)
{
    g_tUart1.uart = USART1; /* STM32 串口设备 */
    g_tUart1.tx.SetBuf(g_TxBuf1, UART1_TX_BUF_SIZE);
    g_tUart1.rx.SetBuf(g_RxBuf1, UART1_RX_BUF_SIZE);
    g_tUart1.SendBefor = 0; /* 发送数据前的回调函数 */
    g_tUart1.SendOver = 0; /* 发送完毕后的回调函数 */
    g_tUart1.ReciveNew = 0; /* 接收到新数据后的回调函数 */
}

void UartSend(UART_T *_pUart, byte *_ucaBuf, ushort _usLen)
{
    #if 1	
        for (int i = 0; i < _usLen; i++)
        {
            //DISABLE_INT();
            while (1)
            {
                if (!_pUart->tx.Full())
                {
                    break;
                }
            }
            //ENABLE_INT();
            _pUart->tx.Push(_ucaBuf[i]);
        }

        USART_ITConfig(_pUart->uart, USART_IT_TXE, ENABLE);
    #else 
        USART_SendData(_pUart->uart, _ucaBuf[0]);
        while (USART_GetFlagStatus(_pUart->uart, USART_FLAG_TXE) == RESET)
            ;
    #endif 
}

void UartIRQ(UART_T *_pUart)
{	
    /* 处理接收中断  */
    if (USART_GetITStatus(_pUart->uart, USART_IT_RXNE) != RESET)
    {
        /* 从串口接收数据寄存器读取数据存放到接收FIFO */
        byte ch;

        ch = USART_ReceiveData(_pUart->uart);
        _pUart->rx.Push(ch);
        /* 回调函数,通知应用程序收到新数据,一般是发送1个消息或者设置一个标记 */
        {
            if (_pUart->ReciveNew)
            {
                _pUart->ReciveNew(ch);
            }
        }
    }

    /* 处理发送缓冲区空中断 */
    if (USART_GetITStatus(_pUart->uart, USART_IT_TXE) != RESET)
    {
        //if (_pUart->usTxRead == _pUart->usTxWrite)
        if (_pUart->tx.Empty())
        {
            /* 发送缓冲区的数据已取完时， 禁止发送缓冲区空中断 （注意：此时最后1个数据还未真正发送完毕）*/
            USART_ITConfig(_pUart->uart, USART_IT_TXE, DISABLE);

            /* 使能数据发送完毕中断 */
            USART_ITConfig(_pUart->uart, USART_IT_TC, ENABLE);
        }
        else
        {
            /* 从发送FIFO取1个字节写入串口发送数据寄存器 */
            USART_SendData(_pUart->uart, _pUart->tx.Pop());
        }

    }
    /* 数据bit位全部发送完毕的中断 */
    else if (USART_GetITStatus(_pUart->uart, USART_IT_TC) != RESET)
    {
        if (_pUart->tx.Empty())
        {
            /* 如果发送FIFO的数据全部发送完毕，禁止数据发送完毕中断 */
            USART_ITConfig(_pUart->uart, USART_IT_TC, DISABLE);

            /* 回调函数, 一般用来处理RS485通信，将RS485芯片设置为接收模式，避免抢占总线 */
            if (_pUart->SendOver)
            {
                _pUart->SendOver();
            }
        }
        else
        {
            /* 正常情况下，不会进入此分支 */
            /* 如果发送FIFO的数据还未完毕，则从发送FIFO取1个数据写入发送数据寄存器 */
            USART_SendData(_pUart->uart, _pUart->tx.Pop());
        }
    }
}
